--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,15 @@
 [pytest]
+# Это было добавлено в предыдущих уроках
 python_files = *_tests.py test_*.py
-python_classes = Test*               # Устанавливает правила для имен классов
-python_functions = test_*            # Устанавливает правила для имен функций
+python_classes = Test*
+python_functions = test_*
+# Регистрируем кастомные маркировки
+markers =
+    ui: Маркировка для UI тестов.
+    smoke: Маркировка для smoke тестов.
+    slow: Маркировка для медленных тестов.
+    fast: Маркировка для быстрых тестов.
+    critical: Маркировка для критически важных тестов.
+    regression: Маркировка для регрессионных тестов.
+    registration: Маркировка для тестов, связанных с регистрацией пользователей.
+    authorization: Маркировка для тестов, связанных с авторизацией пользователей.
