Pytest skip, skipif, xfail

--- a/pytest.ini
+++ b/pytest.ini
@@ -9,6 +9,7 @@ markers =
     smoke: Маркировка для smoke тестов.
     slow: Маркировка для медленных тестов.
     fast: Маркировка для быстрых тестов.
+    courses: Маркировка для тестов связанных с курсами.
     critical: Маркировка для критически важных тестов.
     regression: Маркировка для регрессионных тестов.
     registration: Маркировка для тестов, связанных с регистрацией пользователей.
